lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:3: error: ')' expected but '<-' found.
if (getVitesseY()<-9) {
                 ^Lander:9: error: illegal start of simple expression
	}
        ^