lander.lessons.lander.lvl1_lander_101.Lander101.scala.code

if (getVitesseY()<-9) {
	setPousseeDesiree(4)	
}

